# redrob-ranker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  submission_metadata.yaml  validate_submission.py
artifacts/: embeddings_meta.json  honeypot_flags.json  llm_signals.jsonl  reasoning.jsonl  shortlist_ids.json
docs/: schema.md
docs/challenge/: challenge_README.md
eval/: LABELING_GUIDE.md  __init__.py  calibrate.py  calibration_report.md  evaluate.py  gold_labels.csv  gold_review.csv  gold_review.md  label_helper.py  metrics.json  metrics.py  ranking.py
notebooks/: embed_on_colab.ipynb
sandbox/: .gitignore  README.md  app.py  build_sample.py  build_space.py  requirements.txt  sample_candidates.jsonl
sandbox/artifacts/: candidate_embeddings_000.npy  candidate_ids.npy  embeddings_meta.json  honeypot_flags.json  jd_reference.json  llm_signals.jsonl  reasoning.jsonl
src/: __init__.py  config.py  embedding.py  features.py  honeypots.py  io_utils.py  jd_reference.py  llm_providers.py  llm_signals.py  profile_text.py  rank.py  reasoning.py  scoring.py
src/precompute/: 01_embed_candidates.py  02_build_jd_reference.py  03_extract_signals.py  04_detect_honeypots.py  05_generate_reasoning.py  build_shortlist.py  sanity_rank.py  score_shortlist.py
tests/: __init__.py  conftest.py  factories.py  test_calibrate.py  test_embedding.py  test_evaluate.py  test_features.py  test_honeypots.py  test_io_utils.py  test_jd_reference.py  test_label_helper.py  test_llm_signals.py  test_metrics.py  test_profile_text.py  test_rank.py  test_reasoning.py  test_sandbox.py  test_scoring.py
